--- a/src/Web/LearningPlusWebApp/Views/Home/Index.cshtml
+++ b/src/Web/LearningPlusWebApp/Views/Home/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@{
+﻿@using Microsoft.Extensions.Configuration
+@inject IConfiguration Configuration
+
+@{
     ViewData["Title"] = "Научи повече";
 }
 
@@ -392,7 +395,7 @@
         </div>
 
         <div class="container mb-4">
-            <iframe src="https://www.google.com/maps/embed/v1/place?q=42.6621927,23.3151003&key=AIzaSyDbGt__YIeakadb-qJdG34jOlJdqpngy4s" width="100%" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <iframe src="https://www.google.com/maps/embed/v1/place?q=42.6621927,23.3151003&key=@Configuration["GoogleApiKey"]" width="100%" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
 
         <div class="container">
@@ -402,16 +405,16 @@
                 <form asp-controller="Email" asp-action="SendFromHome" method="post" role="form" class="contactForm">
                     <div class="form-row">
                         <div class="form-group col-md-6">
-                            <input type="text" name="name" class="form-control" id="name" placeholder="Вашето име..." data-rule="minlen:4" data-msg="Моля, въведете поне четири символа!" />
+                            <input type="text" name="name" class="form-control" id="name" placeholder="Вашето име" data-rule="minlen:4" data-msg="Моля, въведете поне четири символа!" />
                             <div class="validation"></div>
                         </div>
                         <div class="form-group col-md-6">
-                            <input type="email" class="form-control" name="email" id="email" placeholder="Вашият имейл..." data-rule="email" data-msg="Моля, виведете валиден имейл!" />
+                            <input type="email" class="form-control" name="email" id="email" placeholder="Вашият имейл" data-rule="email" data-msg="Моля, виведете валиден имейл!" />
                             <div class="validation"></div>
                         </div>
                     </div>
                     <div class="form-group">
-                        <input type="text" class="form-control" name="subject" id="subject" placeholder="Относно..." data-rule="minlen:4" data-msg="Моля, въведете текст от поне четири символа!" />
+                        <input type="text" class="form-control" name="subject" id="subject" placeholder="Относно" data-rule="minlen:4" data-msg="Моля, въведете текст от поне четири символа!" />
                         <div class="validation"></div>
                     </div>
                     <div class="form-group">
